# python-code-runner

./: .flake8  .gitignore  Dockerfile  README.md  build_and_push.sh  export_project.sh  pyproject.toml
app/: main.py
app/api/v1/: execute.py
app/core/: config.py  exceptions.py  handlers.py  logging.py  middleware.py  security.py
app/features/code_execution/: api.py  schemas.py  services.py
app/features/root/: api.py  schemas.py
app/schemas/: execution.py
app/services/: code_execution.py
docs/: architecture.md  monitoring.md  testing.md
k8s/: sample.yaml
tests/: test_execute.py
tests/features/code_execution/: test_api.py
