[tool.poetry]
name = "sandboxed-code-runner"
version = "0.1.0"
description = "A sandboxed environment for running code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
