[tool.poetry]
name = "python-code-runner"
version = "0.1.0"
description = "A python environment for running code"
authors = ["jeiger <cagojeiger89@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
httpx = ">=0.23.0"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict = true
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.11"
starlette = "0.27.0"
httpx = "0.23.1"
structlog = "^24.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
